wait to host 2nd time

--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                <div class="bar__module">
                  <ul class="menu-horizontal text-left">
                    <li> <a href="home.html">  Home</a> </li>
-                   <li> <a href="goodjobs.html"> GOOD JOBS</a> </li>
+                   <li> <a href="https://jobsearch-1db15.firebaseapp.com/"> GOOD JOBS</a> </li>
                    <li class="dropdown">
                      <div class="dropdown__container">
                        <div class="container">
@@ -313,7 +313,7 @@
       <div class="row">
         <div class="col-sm-7">
           <ul class="list-inline">
-            <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+            <li> <a href="https://jobsearch-1db15.firebaseapp.com/"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
             <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
             <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
             <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
