--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
                 <ul class="menu-horizontal text-left">
                   <li> <a href="home.html">  Home</a> </li>
 
-                  <li> <a href="goodjobs.html"> GOOD JOBS</a> </li>
+                  <li> <a href="https://jobsearch-1db15.firebaseapp.com/"> GOOD JOBS</a> </li>
                   <li class="dropdown">
 
                     <a href="solutions-home.html">    SOLUTIONS     </a>
@@ -116,26 +116,25 @@
 
   <div class="main-container">
     <section class="cover imagebg height-100 section--ken-burns">
-      <div class="background-image-holder"><img alt="find a good job with imi today" src="img/Rhonda-Chat-Function-March2018-Home.jpg"></div>
-      <!-- <div class="container pos-vertical-center">
+      <div class="background-image-holder"><img alt="find a good job with imi today" src="img/imi-Rhonda-Artificial-Intelligence-Home-Header.jpg"></div>
+      <div class="container pos-vertical-center">
         <div class="row">
           <div class="col-sm-12">
-            <h1>Find a <b>good job</b> today!</h1>
-            <p class="lead"><b>
-					Upload your resume</b> – It only takes a few seconds </p>
-            <div class="boxed boxed--lg bg--white text-left">
+            <h1>Delivering the power of people.</h1>
+            <p class="lead">IMI is the Leading Installer of Supply Chain Technology.</p>
+            <!-- <div class="boxed boxed--lg bg--white text-left">
               <form class="form--horizontal">
                 <div class="col-sm-4"> <input type="text" name="keywords" placeholder="What - job title, keywords, or company"> </div>
                 <div class="col-sm-4"> <input type="text" name="location" placeholder="Where - city, state or province"> </div>
                 <div class="col-sm-4"> <button type="submit" class="btn type--uppercase btn--primary">GET HIRED</button> </div>
               </form>
-            </div>
+            </div> -->
           </div>
 
         </div>
 
 
-      </div> -->
+      </div>
 
     </section>
     <section class="switchable feature-large space--md switchable--switch">
@@ -233,7 +232,7 @@
         <div class="row">
           <div class="col-sm-7">
             <ul class="list-inline">
-              <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+              <li> <a href="https://jobsearch-1db15.firebaseapp.com/"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
               <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
               <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
