--- a/jobs-list.html
+++ b/jobs-list.html
@@ -6,7 +6,7 @@
   <title>IMI - A Global People Company</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
+  <!-- <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all"> -->
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
@@ -114,7 +114,8 @@
   </div>
 
   <div class="main-container">
-    <section class="imagebg videobg text-center height-80" data-overlay="4"> <video autoplay="" loop="" muted="">
+    <section class="imagebg videobg text-center height-80" data-overlay="4">
+      <video autoplay="" loop="" muted="">
 		<source src="video/video.webm" type="video/webm">
 		<source src="video/video.mp4" type="video/mp4">
 		<source src="video/video.ogv" type="video/ogv">
