--- a/jobsdescription.html
+++ b/jobsdescription.html
@@ -1,114 +1,24 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
-        <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
 
-    </head>
-    <body data-smooth-scroll-offset="77">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
+  <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
 
-        <!-- <div class="nav-container">
-          <div class="via-1521838517825" via="via-1521838517825" vio="Jobs">
-            <div class="bar bar--sm visible-xs">
-              <div class="container">
-                <div class="row">
-                  <div class="col-xs-3 col-sm-2">
-                    <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
-                  </div>
-                  <div class="col-xs-9 col-sm-10 text-right">
-                    <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <nav id="menu1" class="bar bar-1 hidden-xs">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-1 col-sm-2 hidden-xs">
-                    <div class="bar__module">
-                      <a href="index.html"> <img class="logo logo-dark" alt="imi powered by our Artificial Intelligence Rhonda" src="img/imi-good-jobs-logo.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
-                    </div>
-                  </div>
-                  <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
-                    <div class="bar__module">
-                      <ul class="menu-horizontal text-left">
-                        <li> <a href="jobs-home.html">
-                                              Jobs</a> </li>
-                        <li class="dropdown">
+</head>
 
-                          <a href="solutions-home.html">    SOLUTIONS     </a>
-                          <span class="dropdown__trigger">
-                                             </span>
-                          <div class="dropdown__container">
-                            <div class="container">
-                              <div class="row">
-                                <div class="dropdown__content col-md-2">
-                                  <ul class="menu-vertical">
-                                    <li> <a href="solutions-home.html#section2">Automation</a> </li>
-                                    <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
-                                    <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
-                                    <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
-                                  </ul>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="dropdown">
-                          <div class="dropdown__container">
-                            <div class="container">
-                              <div class="row">
-                                <div class="dropdown__content col-md-12">
-                                  <div class="col-md-3">
-                                    <h5>Menu Title</h5>
-                                    <ul class="menu-vertical">
-                                      <li> <a href="#">Single Link</a> </li>
-                                    </ul>
-                                  </div>
-                                  <div class="col-md-3">
-                                    <h5>Menu Title</h5>
-                                    <ul class="menu-vertical">
-                                      <li> <a href="#">Single Link</a> </li>
-                                    </ul>
-                                  </div>
-                                  <div class="col-md-3">
-                                    <h5>Menu Title</h5>
-                                    <ul class="menu-vertical">
-                                      <li> <a href="#">Single Link</a> </li>
-                                    </ul>
-                                  </div>
-                                  <div class="col-md-3">
-                                    <h5>Menu Title</h5>
-                                    <ul class="menu-vertical">
-                                      <li> <a href="#">Single Link</a> </li>
-                                    </ul>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="bar__module">
-                      <a class="btn btn--sm btn--primary type--uppercase" href="jobs-sign-up.html"> <span class="btn__text">
-                                          Upload Resume</span> </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </nav>
-          </div>
-        </div> -->
-        <div class="nav-container">
+<body data-smooth-scroll-offset="77">
+
+
+  <div class="nav-container">
     <div class="via-1521838517825" via="via-1521838517825" vio="Jobs">
       <div class="bar bar--sm visible-xs">
         <div class="container">
@@ -203,91 +113,98 @@
     </div>
   </div>
 
-        <div class="main-container">
-            <section class="text-center bg--secondary">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-10">
-                            <div class="video-cover border--round">
-                                <div class="background-image-holder"> <img alt="image" src="img/cowork-5.jpg"> </div>
-                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="switchable">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-md-8">
-                            <h2>Mechanical Installer</h2>
-                            <p><b>Ottawa, Ontario - Full-time<br></b></p>
-                            <p><b><br></b></p>
-                            <p><b>Apply Now (Add Button)</b></p>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo, metus vitae blandit finibus, sem purus vulputate mauris, quis gravida sem metus eget quam. In et lacus vitae dui porta iaculis. Vestibulum dapibus suscipit porttitor. Nam eu mollis lorem. <br><br>Maecenas elementum ex et arcu laoreet, non aliquet elit ornare. Vivamus mattis magna eget justo iaculis, in porta mi elementum. Pellentesque consectetur, diam sed mattis eleifend, ex ante eleifend augue, vitae tempor sem lectus ac eros.<br><br>Proin vestibulum turpis ac nunc accumsan, eu euismod erat porttitor. Fusce gravida, arcu vel iaculis dictum, ex nibh porttitor odio, eget vehicula mauris nulla et purus. Mauris bibendum odio sapien, in sollicitudin magna ultricies in. Praesent tincidunt augue in urna rutrum consectetur. Cras bibendum congue tortor id semper. Pellentesque congue ultrices velit ac interdum.<br><br>Vivamus et leo pretium, rhoncus purus quis, tristique dui. Phasellus quam sapien, vulputate id dui sit amet, posuere congue turpis. Sed vel lorem feugiat, condimentum tellus quis, tempor risus.<br><br><i>Posted 18 days ago</i></p>
-                        </div>
-                        <div class="col-sm-4 col-md-3">
-                            <div class="text-block">
-                                <h5>Employer</h5>
-                                <p><b>
+  <div class="main-container">
+    <section class="text-center bg--secondary">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-10">
+            <div class="video-cover border--round">
+              <div class="background-image-holder"> <img alt="image" src="img/cowork-5.jpg"> </div>
+              <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="switchable">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-8">
+            <h2>Mechanical Installer</h2>
+            <p><b>Ottawa, Ontario - Full-time<br></b></p>
+            <p><b><br></b></p>
+            <p><b>Apply Now (Add Button)</b></p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo, metus vitae blandit finibus, sem purus vulputate mauris, quis gravida sem metus eget quam. In et lacus vitae dui porta iaculis. Vestibulum dapibus suscipit porttitor. Nam
+              eu mollis lorem. <br><br>Maecenas elementum ex et arcu laoreet, non aliquet elit ornare. Vivamus mattis magna eget justo iaculis, in porta mi elementum. Pellentesque consectetur, diam sed mattis eleifend, ex ante eleifend augue, vitae tempor
+              sem lectus ac eros.<br><br>Proin vestibulum turpis ac nunc accumsan, eu euismod erat porttitor. Fusce gravida, arcu vel iaculis dictum, ex nibh porttitor odio, eget vehicula mauris nulla et purus. Mauris bibendum odio sapien, in sollicitudin
+              magna ultricies in. Praesent tincidunt augue in urna rutrum consectetur. Cras bibendum congue tortor id semper. Pellentesque congue ultrices velit ac interdum.<br><br>Vivamus et leo pretium, rhoncus purus quis, tristique dui. Phasellus quam
+              sapien, vulputate id dui sit amet, posuere congue turpis. Sed vel lorem feugiat, condimentum tellus quis, tempor risus.<br><br><i>Posted 18 days ago</i></p>
+          </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="text-block">
+              <h5>Employer</h5>
+              <p><b>
 						IMI - A global people company</b><br></p>
-                            </div>
-                            <div class="text-block">
-                                <h5>Address</h5>
-                                <p>Suit 100 495 Richmond rd.<br>Ottawa Ontario, Canada<br>K2J6C9</p>
-                            </div>
-                            <div class="text-block">
-                                <h5>Salary</h5>
-                                <p>$61,000</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="text-center imagebg" data-gradient-bg="#f47436,#f68c1f,#f6b21f,#f47436">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-md-6">
-                            <div class="cta">
-                                <h2>Apply for a <b>good job</b> now.</h2> <a class="btn type--uppercase btn--primary" href="imiapply.html"><span class="btn__text">Apply NOw</span></a> </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <footer class="text-center-xs space--xs">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-7">
-          <ul class="list-inline">
-            <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
-            <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-            <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
-            <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
-          </ul>
-        </div>
-        <div class="col-sm-5 text-right text-center-xs">
-          <ul class="social-list list-inline list--hover">
-            <li><a href="https://www.facebook.com/IMIsocial/" target="_self"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UClr2KzyTFjUhlie60BBW53Q" target="_self"><i class="socicon icon socicon-youtube icon--xs"></i></a></li>
-            <li><a href="https://www.instagram.com/imi.social/" target="_self"><i class="socicon icon socicon-instagram icon--xs"></i></a></li>
-            <li><a href="https://www.linkedin.com/company/imi-material-handling-logistics/" target="_self"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
-            <li><a href="https://twitter.com/imi_social" target="_self"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-          </ul>
+            </div>
+            <div class="text-block">
+              <h5>Address</h5>
+              <p>Suit 100 495 Richmond rd.<br>Ottawa Ontario, Canada<br>K2J6C9</p>
+            </div>
+            <div class="text-block">
+              <h5>Salary</h5>
+              <p>$61,000</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-7"> <span class="type--fine-print">© <span class="update-year">2018</span> IMI&nbsp; Inc.</span>
+    </section>
+    <section class="text-center imagebg" data-gradient-bg="#f47436,#f68c1f,#f6b21f,#f47436">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-6">
+            <div class="cta">
+              <h2>Apply for a <b>good job</b> now.</h2> <a class="btn type--uppercase btn--primary" href="imiapply.html"><span class="btn__text">Apply NOw</span></a> </div>
+          </div>
         </div>
-        <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="#about">support@imipeople.com</a> </div>
       </div>
-    </div>
-  </footer>
-        </div>
-        <script src="js/jquery-3.1.1.min.js"></script>
-        <script src="js/parallax.js"></script>
-        <script src="js/granim.min.js"></script>
-        <script src="js/smooth-scroll.min.js"></script>
-        <script src="js/scripts.js"></script>
+    </section>
 
-    </body>
+
+
+    <footer class="text-center-xs space--xs">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
+            <ul class="list-inline">
+              <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+              <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
+              <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+              <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
+            </ul>
+          </div>
+          <div class="col-sm-5 text-right text-center-xs">
+            <ul class="social-list list-inline list--hover">
+              <li><a href="https://www.facebook.com/IMIsocial/" target="_self"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UClr2KzyTFjUhlie60BBW53Q" target="_self"><i class="socicon icon socicon-youtube icon--xs"></i></a></li>
+              <li><a href="https://www.instagram.com/imi.social/" target="_self"><i class="socicon icon socicon-instagram icon--xs"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/imi-material-handling-logistics/" target="_self"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
+              <li><a href="https://twitter.com/imi_social" target="_self"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-7"> <span class="type--fine-print">© <span class="update-year">2018</span> IMI&nbsp; Inc.</span>
+          </div>
+          <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="#about">support@imipeople.com</a> </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="js/parallax.js"></script>
+  <script src="js/granim.min.js"></script>
+  <script src="js/smooth-scroll.min.js"></script>
+  <script src="js/scripts.js"></script>
+
+</body>
 
 </html>
