--- a/rhonda.html
+++ b/rhonda.html
@@ -133,14 +133,16 @@
 
     <section class="cover imagebg height-100 text-center image--light">
       <div style="display:table;" class="background-image-holder">
-        <img alt="Rhonda uses predictive analytics to pre-determine a system malfunction before it happens powered by Artificial Intelligence" src="img/Rhonda-Chat-Function-March2018-Rhonda.jpg">
-        <!-- <div style="display:table-cell;  vertical-align:middle;" class="container">
-          <div class="row">
+        <img alt="Rhonda uses predictive analytics to pre-determine a system malfunction before it happens powered by Artificial Intelligence" src="img/imi-rhonda-header.jpg">
+        <div style="display:table-cell;  vertical-align:middle;" class="container">
+          <div><img style="display:initial" src="img/rhonda-logo.png" alt=""></div>
+          <!-- <div class="row">
             <div class="col-sm-12">
               <div class="typed-headline"> <span class="h2 inline-block"><p style="color:#383838">I'm Rhonda — An Artificial Intelligence built for</p></span> <span class="h2 inline-block typed-text typed-text--cursor color--white" data-typed-strings="automation, workforce management,  interviews, scheduling, surveys, rating">automation</span>                </div>
+
             </div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
       </div>
     </section>
     <a id="operate-title" class="in-page-link"></a>
