--- a/solutions-home.html
+++ b/solutions-home.html
@@ -157,7 +157,7 @@
               <div class="bar__module">
                 <ul class="menu-horizontal text-left">
                   <li> <a href="home.html">  Home</a> </li>
-                  <li> <a href="goodjobs.html"> GOOD JOBS</a> </li>
+                  <li> <a href="https://jobsearch-1db15.firebaseapp.com/"> GOOD JOBS</a> </li>
                   <li class="dropdown">
                     <div class="dropdown__container">
                       <div class="container">
@@ -327,9 +327,9 @@
         <div class="row">
           <div class="col-sm-8 col-md-9">
             <h1> Automation </h1>
-            <p class="lead"> Save millions in lost revenue by proactively addressing issues before breakdowns occur. Zoom out to look at the overall productivity of your workforce and equipment to pinpoint areas of processes that are performing below acceptable levels.<br>              </p>
+            <p class="lead"> As the largest mechanical installation company in North America, IMI deploys a robust and skilled technician team that has the capacity to deliver on the installation and service expectations of your client. Fully trained and prepared for work, IMI technicians service a full range of material handling automation technologies.<br>              </p>
             <a class="btn type--uppercase" href="automation.html"> <span class="btn__text">
-              View The Demos
+              Learn More
             </span> </a>
           </div>
         </div>
@@ -349,8 +349,7 @@
         <div class="row">
           <div class="col-sm-8 col-md-9">
             <h1> Material Handling </h1>
-            <p class="lead"> Receive instant information about employee and supervisor performance, training<br>and safety based on a daily check-in and rating system. Go back over a period of weeks, months, even years to check employee’s average performance rating to
-              ensure consistent satisfaction and execution.&nbsp;<br> </p>
+            <p class="lead"> See how over a period of 20 years, IMI has formed partnerships with multiple Fortune 500 companies such as Amazon, DHL, FedEx, Tesla, and many more. With the growing demand of workers in a rapidly expanding industry, IMI remains an expert in large-scale employment solutions in the material handling sector.&nbsp;<br> </p>
             <a class="btn type--uppercase" href="material-handling.html"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
@@ -364,8 +363,7 @@
         <div class="row">
           <div class="col-sm-8 col-md-9">
             <h1> Executive Search </h1>
-            <p class="lead"> Let Rhonda automate your processes from pre-screening to on-boarding. Preset questions with assigned values determine who would be the best fit for your organization automatically.<br>Schedule formal interviews, offer contracts, provide helpful
-              info for their first day:<br>Rhonda makes a generally tedious process seamless.<br> </p>
+            <p class="lead">Learn how IMI has begun revolutionizing the world of executive search using strategic marketing and event planning processes. Not only can we deliver on talent acquisition we can also establish, build and promote your company’s corporate culture. Let us make you the coolest company on the block.<br> </p>
             <a class="btn type--uppercase" href="execsearch.html"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
@@ -379,7 +377,7 @@
         <div class="row">
           <div class="col-sm-8 col-md-9">
             <h1>Meet Rhonda</h1>
-            <p class="lead"> Your AI workforce management solution with the power to automate thousands of tasks.<br>Performance management, analytics, trackability, compliancy extracted in real-time and available within your own customizable dashboard.<br> </p>
+            <p class="lead"> A revolution in the world of workforce management, Rhonda provides companies with a complete picture of their people. With Rhonda at the helm, your workforce will never miss a beat allowing your overall productivity to soar. Gain unparalleled insight into your organization to maintain the highest level of sustainable performance.<br> </p>
             <a class="btn type--uppercase" href="rhonda.html"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
@@ -391,7 +389,7 @@
           <div class="row">
             <div class="col-sm-7">
               <ul class="list-inline">
-                <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+                <li> <a href="https://jobsearch-1db15.firebaseapp.com/"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
                 <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
                 <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
                 <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
