changed links and styling

--- a/contact.html
+++ b/contact.html
@@ -250,12 +250,19 @@
 
           </div>
           <div class="col-sm-6 col-xs-12">
-            <div class="text-block">
+            <!-- <div class="text-block">
               <p class="lead">E: <a href="#">hello@imipeople.com</a><br> P: 1.877.464.4484&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
               <p class="lead"> Use the form below to drop us an email.<br>Old-fashioned phone calls work too .</p>
               <p class="lead"> We are open from 9am — 5pm week days. </p>
-            </div>
+
+            </div> -->
             <div class="row contactPage">
+              <div class="text-block">
+                <p class="lead">E: <a href="#">hello@imipeople.com</a><br> P: 1.877.464.4484&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p class="lead"> Use the form below to drop us an email.<br>Old-fashioned phone calls work too .</p>
+                <p class="lead"> We are open from 9am — 5pm week days. </p>
+
+              </div>
               <!-- <form class="form-email" data-success="Thanks for your enquiry, we'll be in touch shortly." data-error="Please fill in all fields correctly.">
                 <div class="col-sm-6 col-xs-12"> <label>Your Name:</label> <input type="text" name="Name" class="validate-required"> </div>
                 <div class="col-sm-6 col-xs-12"> <label>Email Address:</label> <input type="email" name="email" class="validate-required validate-email"> </div>
@@ -315,7 +322,7 @@
           <ul class="list-inline">
             <li> <a href="https://jobsearch-1db15.firebaseapp.com/"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
             <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-            <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+            <li> <a href="http://www.imipeople.com/careers/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
             <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
           </ul>
         </div>
