--- a/imiapply.html
+++ b/imiapply.html
@@ -138,7 +138,7 @@
                   <ul class="list-inline">
                     <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
                     <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-                    <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+                    <li> <a href="http://www.imipeople.com/careers/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
                     <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
                   </ul>
                 </div>
