--- a/rhonda.html
+++ b/rhonda.html
@@ -209,7 +209,7 @@
         <div class="row">
           <div class="col-sm-8 col-md-6">
             <div class="cta">
-              <h2>Get Rhonda working for you today!</h2> <a class="btn btn--primary type--uppercase" href="#purchase-template"><span class="btn__text">Learn More</span></a> </div>
+              <h2>Get Rhonda working for you today!</h2> <a class="btn btn--primary type--uppercase" href="http://imipeople.com/jobs/contact.html"><span class="btn__text">Learn More</span></a> </div>
           </div>
         </div>
       </div>
@@ -379,7 +379,7 @@
               <ul class="list-inline">
                 <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
                 <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-                <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+                <li> <a href="http://www.imipeople.com/careers/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
                 <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
               </ul>
             </div>
