--- a/solutions-home.html
+++ b/solutions-home.html
@@ -230,7 +230,7 @@
                 </ul>
               </div>
               <div class="bar__module">
-                <a class="btn btn--sm type--uppercase btn--primary" href="contact.html"> <span class="btn__text">
+                <a class="btn btn--sm type--uppercase btn--primary btn-block" href="contact.html"> <span class="btn__text">
                                     Contact</span> </a>
               </div>
             </div>
@@ -328,7 +328,7 @@
           <div class="col-sm-8 col-md-9">
             <h1> Automation </h1>
             <p class="lead"> As the largest mechanical installation company in North America, IMI deploys a robust and skilled technician team that has the capacity to deliver on the installation and service expectations of your client. Fully trained and prepared for work, IMI technicians service a full range of material handling automation technologies.<br>              </p>
-            <a class="btn type--uppercase" href="automation.html"> <span class="btn__text">
+            <a class="btn type--uppercase" href="https://goodjobs.imipeople.com/automation/"> <span class="btn__text">
               Learn More
             </span> </a>
           </div>
@@ -350,7 +350,7 @@
           <div class="col-sm-8 col-md-9">
             <h1> Material Handling </h1>
             <p class="lead"> See how over a period of 20 years, IMI has formed partnerships with multiple Fortune 500 companies such as Amazon, DHL, FedEx, Tesla, and many more. With the growing demand of workers in a rapidly expanding industry, IMI remains an expert in large-scale employment solutions in the material handling sector.&nbsp;<br> </p>
-            <a class="btn type--uppercase" href="material-handling.html"> <span class="btn__text">
+            <a class="btn type--uppercase" href="https://goodjobs.imipeople.com/material_handling/"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
         </div>
@@ -391,7 +391,7 @@
               <ul class="list-inline">
                 <li> <a href="https://jobsearch-1db15.firebaseapp.com/"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
                 <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-                <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+                <li> <a href="http://www.imipeople.com/careers/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
                 <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
               </ul>
             </div>
