--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>IMI - A Global People Company</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/flickity.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -16,8 +17,6 @@
 </head>
 
 <body data-smooth-scroll-offset="77">
-
-
   <div class="nav-container">
     <div class="via-1521838517825" via="via-1521838517825" vio="Jobs">
       <div class="bar bar--sm visible-xs">
@@ -43,9 +42,9 @@
             <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
               <div class="bar__module">
                 <ul class="menu-horizontal text-left">
-                  <li> <a href="home.html">  Home</a> </li>
+                  <li> <a href="index.html">  Home</a> </li>
 
-                  <li> <a href="goodjobs.html"> GOOD JOBS</a> </li>
+                  <li> <a href="https://jobsearch-1db15.firebaseapp.com/"> GOOD JOBS</a> </li>
                   <li class="dropdown">
 
                     <a href="solutions-home.html">    SOLUTIONS     </a>
@@ -103,7 +102,7 @@
                 </ul>
               </div>
               <div class="bar__module">
-                <a class="btn btn--sm btn--primary type--uppercase" href="jobs-sign-up.html"> <span class="btn__text">
+                <a class="btn btn--sm btn--primary type--uppercase btn-block" href="jobs-sign-up.html"> <span class="btn__text">
                                     Upload Resume</span> </a>
               </div>
             </div>
@@ -113,61 +112,119 @@
     </div>
   </div>
 
+
+
   <div class="main-container">
+    <section class="cover imagebg height-100 section--ken-burns">
+      <div class="background-image-holder"><img alt="find a good job with imi today" src="img/imi-Rhonda-Artificial-Intelligence-Home-Header.jpg"></div>
+      <div class="container pos-vertical-center">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>Delivering the power of people.</h1>
+            <p class="lead">IMI is the Leading Installer of Supply Chain Technology.</p>
+            <!-- <div class="boxed boxed--lg bg--white text-left">
+              <form class="form--horizontal">
+                <div class="col-sm-4"> <input type="text" name="keywords" placeholder="What - job title, keywords, or company"> </div>
+                <div class="col-sm-4"> <input type="text" name="location" placeholder="Where - city, state or province"> </div>
+                <div class="col-sm-4"> <button type="submit" class="btn type--uppercase btn--primary">GET HIRED</button> </div>
+              </form>
+            </div> -->
+          </div>
+
+        </div>
+
+
+      </div>
+
+    </section>
+    <section class="switchable feature-large space--md switchable--switch">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-xs-12">
+            <div class="video-cover border--round box-shadow-wide">
+              <div class="background-image-holder"> <img alt="image" src="img/about-video-preview2.jpg"> </div>
+              <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/e9g0eZ2M0tk" allowfullscreen="allowfullscreen"></iframe> </div>
+          </div>
+          <div class="col-sm-6 col-md-5">
+            <div class="switchable__text">
+              <h2>Delivering the<br>power of people.</h2>
+              <p class="lead"> IMI helps people get good jobs with the world's most progressive companies. </p>
+              <p> What does that mean? It means that we invest in people; in our employees, our candidates, and the clients we work with. It means that stability, security, happiness, and fulfillment are just as important to us as our bottom line. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <a id="rhonda" class="in-page-link"></a>
+    <section class="switchable feature-large unpad--bottom imagebg image--light switchable--switch">
+      <div class="background-image-holder"> <img alt="background" src="img/rhonda-jobs-home3.jpg"> </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
+            <div class="switchable__text">
+              <h2>Meet Rhonda, your AI virtual assistant<br>that is <b>revolutionizing</b> the landscape<br>of workforce management.</h2>
+              <p> Where Rhonda differs from her human colleagues is automation.&nbsp;She can communicate with thousands of employees at once through SMS, email, or by phone in a multitude of languages.</p> <a href="http://imipeople.com/jobs/rhonda.html">Learn More »</a> </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-xs-12 text-center"> <img alt="Sign up with Rhonda today and experience for yourself everything she can do for you." src="img/jobs-iphone-rhonda-home2.png"> </div>
+        </div>
+      </div>
+    </section>
+    <a id="testimonials" class="in-page-link"></a>
     <section class="text-center bg--secondary">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-10">
-            <div class="video-cover border--round">
-              <div class="background-image-holder"> <img alt="image" src="img/cowork-5.jpg"> </div>
-              <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="switchable">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-8">
-            <h2>Mechanical Installer</h2>
-            <p><b>Ottawa, Ontario - Full-time<br></b></p>
-            <p><b><br></b></p>
-            <p><b>Apply Now (Add Button)</b></p>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo, metus vitae blandit finibus, sem purus vulputate mauris, quis gravida sem metus eget quam. In et lacus vitae dui porta iaculis. Vestibulum dapibus suscipit porttitor. Nam
-              eu mollis lorem. <br><br>Maecenas elementum ex et arcu laoreet, non aliquet elit ornare. Vivamus mattis magna eget justo iaculis, in porta mi elementum. Pellentesque consectetur, diam sed mattis eleifend, ex ante eleifend augue, vitae tempor
-              sem lectus ac eros.<br><br>Proin vestibulum turpis ac nunc accumsan, eu euismod erat porttitor. Fusce gravida, arcu vel iaculis dictum, ex nibh porttitor odio, eget vehicula mauris nulla et purus. Mauris bibendum odio sapien, in sollicitudin
-              magna ultricies in. Praesent tincidunt augue in urna rutrum consectetur. Cras bibendum congue tortor id semper. Pellentesque congue ultrices velit ac interdum.<br><br>Vivamus et leo pretium, rhoncus purus quis, tristique dui. Phasellus quam
-              sapien, vulputate id dui sit amet, posuere congue turpis. Sed vel lorem feugiat, condimentum tellus quis, tempor risus.<br><br><i>Posted 18 days ago</i></p>
-          </div>
-          <div class="col-sm-4 col-md-3">
-            <div class="text-block">
-              <h5>Employer</h5>
-              <p><b>
-						IMI - A global people company</b><br></p>
-            </div>
-            <div class="text-block">
-              <h5>Address</h5>
-              <p>Suit 100 495 Richmond rd.<br>Ottawa Ontario, Canada<br>K2J6C9</p>
-            </div>
-            <div class="text-block">
-              <h5>Salary</h5>
-              <p>$61,000</p>
+          <div class="col-md-8 col-sm-10">
+            <div class="slider" data-paging="true">
+              <ul class="slides">
+                <li>
+                  <div class="testimonial">
+                    <blockquote> “There's a feeling of structure that you can't find in other templates — Stack has become my default template.” </blockquote>
+                    <h5>Jason Briggs</h5> <span>Envato Customer</span> </div>
+                </li>
+                <li>
+                  <div class="testimonial">
+                    <blockquote> “Variant has been a massive plus for my workflow — I can now get live mockups out in a matter of hours, my clients really love it.” </blockquote>
+                    <h5>Rob Vasquez</h5> <span>Interface Designer — Yoke</span> </div>
+                </li>
+                <li>
+                  <div class="testimonial">
+                    <blockquote> “We’ve been using Stack to prototype designs quickly and efficiently. Needless to say we’re hugely impressed by the style and value.” </blockquote>
+                    <h5>Maguerite Holland</h5> <span>Interface Designer — Yoke</span> </div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="text-center imagebg" data-gradient-bg="#f47436,#f68c1f,#f6b21f,#f47436">
+    <a id="cta" class="in-page-link"></a>
+    <section class="switchable imagebg section--ken-burns switchable--switch">
+      <div id="imgDiv-jobs-home" class="background-image-holder">
+        <img alt="Never miss a good job opportunity in your area with imi and Rhonda." src="img/imi-mobile-bg-B.jpg"> </div>
       <div class="container">
         <div class="row">
-          <div class="col-sm-8 col-md-6">
-            <div class="cta">
-              <h2>Apply for a <b>good job</b> now.</h2> <a class="btn type--uppercase btn--primary" href="imiapply.html"><span class="btn__text">Apply NOw</span></a> </div>
+          <div class="col-sm-5">
+            <div class="switchable__text formSameAsCareerPage">
+              <h2>Never miss a job opportunity in your area.</h2>
+              <p class="lead"> Sign up to receive up-to-date job openings from Rhonda.</p>
+              <script charset="utf-8" type="text/javascript" src="http://js.hsforms.net/forms/v2.js"></script>
+              <script>
+                hbspt.forms.create({
+                  portalId: "3221062",
+                  formId: "4b5baabf-8510-49ff-ace0-c9e6bef12ae4",
+                  css: ""
+                });
+              </script>
+              <!-- <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <button type="submit" class="btn btn--primary type--uppercase">Subscribe</button>
+                                    <div aria-hidden="true"> <input type="text" name="b_77142ece814d3cff52058a51f_f300c9cce8" tabindex="-1" value=""> </div>
+                                </form> -->
+            </div>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- <div class="element">Test</div> -->
 
 
     <footer class="text-center-xs space--xs">
@@ -175,7 +232,7 @@
         <div class="row">
           <div class="col-sm-7">
             <ul class="list-inline">
-              <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+              <li> <a href="https://jobsearch-1db15.firebaseapp.com/"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
               <li> <a href="http://www.imipeople.com/careers/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
               <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
@@ -200,8 +257,8 @@
     </footer>
   </div>
   <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="js/flickity.min.js"></script>
   <script src="js/parallax.js"></script>
-  <script src="js/granim.min.js"></script>
   <script src="js/smooth-scroll.min.js"></script>
   <script src="js/scripts.js"></script>
 
